# cpucheck

./: Makefile.am  README  configure.ac
acm4/: random_nible_size.m4
src/: check_addsub.c  check_bitscan.c  check_bittest.c  check_bool.c  check_cmps.c  check_cmpxchg.c  check_lea.c  check_lodsstos.c  check_lzcnt.c  check_muldiv.c  check_signextend.c  cpucheck.c  cpucheck.h
